--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - /data/docker/volumes/sont_data/:/usr/share/elasticsearch/data
 
   sont_db:
-    image: mysql:latest
+    image: mysql:5.6
     container_name: soundtoll_mysql
     restart: always
     environment:
