--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     environment:
       MYSQL_USER: user
       MYSQL_PASSWORD: user
-      MYSQL_ROOT_PASSWORD: bonzo
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: default_schema
     volumes:
       - /data/docker/volumes/sont_db/_data/mysql:/var/lib/mysql
