Volume location ES changed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - 9200
     networks:
       - sont_network
-    
+    volumes:
+      - /data/docker/volumes/sont_data/_data:/usr/share/elasticsearch/data
 
   sont_db:
     image: mysql:5.7
