--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
   sont_db:
     image: mysql:5.7
     container_name: soundtoll_mysql
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     expose:
       - 3306
