--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     volumes:
       - /data/docker/volumes/sont_data/_data:/usr/share/elasticsearch/data
 
-  sont_db:
+  sont_mysql:
     image: mysql:5.7
     container_name: soundtoll_mysql
     command: --default-authentication-plugin=mysql_native_password
@@ -48,7 +48,7 @@ services:
       - VIRTUAL_HOST=soundtoll.sd.di.huc.knaw.nl
     links:
       - elastic
-      - sont_db
+      - sont_mysql
     ports:
       - 8080:80
     networks:
