--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
   sont_mysql:
     image: mysql:5.7
     container_name: soundtoll_mysql
-    command: --default-authentication-plugin=mysql_native_password
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci --init-connect='SET NAMES UTF8;' --innodb-flush-log-at-trx-commit=0
     restart: always
     expose:
       - 3306
